--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:text="Tips Calculator"
+        android:text="@string/app_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Preencha os campos abaixo para calcular a sua conta"
+        android:text="@string/main_subtitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_title" />
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Digite o  valor da conta:"
+        android:text="@string/table_amount_label"
         app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
         app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />
 
@@ -58,7 +58,7 @@
             android:id="@+id/tie_total"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="ex: R$ 100,00"
+            android:hint="@string/table_amount_hint"
             android:inputType="numberDecimal"
             android:paddingStart="0dp"
             android:textSize="24sp"
@@ -72,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Número de Pessoas:"
+        android:text="@string/num_people_label"
         app:layout_constraintStart_toStartOf="@+id/til_total"
         app:layout_constraintTop_toBottomOf="@+id/til_total" />
 
@@ -92,7 +92,7 @@
             android:id="@+id/tie_num_people"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="ex: 4"
+            android:hint="@string/number_of_people_hint"
             android:inputType="number"
             android:maxLength="2"
             android:paddingStart="0dp"
@@ -106,7 +106,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Porcentagem da Gorjeta:"
+        android:text="@string/percentage_label"
         app:layout_constraintStart_toStartOf="@+id/til_num_people"
         app:layout_constraintTop_toBottomOf="@+id/til_num_people" />
 
@@ -125,7 +125,7 @@
             android:id="@+id/tie_percentage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="ex: 10%"
+            android:hint="@string/percentage_tip_hint"
             android:inputType="number"
             android:maxLength="3"
             android:paddingStart="0dp"
@@ -142,7 +142,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="16dp"
-        android:text="Limpar"
+        android:text="@string/clean"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
         app:layout_constraintStart_toStartOf="@+id/tv_subtitle" />
@@ -161,7 +161,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:text="Calcular"
+        android:text="@string/calculate"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/verticalGuideline" />
